
2012-09-12  Davide Andreoli (davemds)

        * Add external property "play length" to Video widget, read-only.

2012-09-13  M.V.K. Sumanth

        * Fix diskselector when bounce off and round enabled.

2012-09-12  Flavio Ceolin

        * Add elementary_codegen - tool that genereates code to working with
          edje files. Given an edje file and a group, it searchs for SWALLOW
          parts and programs and generates a source/header with the helpers
          for the follow functions:

            - elm_layout_signal_callback_del
            - elm_layout_signal_callback_add
            - elm_layout_signal_emit
            - elm_layout_content_get
            - elm_layout_content_set
            - elm_layout_content_unset
            - elm_layout_text_get
            - elm_layout_text_set
            - elm_layout_theme_set

2012-09-14  Doyoun Kang

        * Add APIs for floating mode
          - elm_win_floating_mode_set
          - elm_win_floating_mode_get

2012-09-14  Shinwoo Kim (kimcinoo)

        * Fix info field set for bubble widget.

2012-09-17  Shinwoo Kim (kimcinoo)

        * Add direction enum to elm access activate api
        * Use activate directions

2012-09-19  Jaehwan Kim

        * Add reorder mode set/get API in Toolbar

2012-09-19  Michael Bouchaud (yoz)

        * fix resizing on naviframe when an item is poped

2012-09-20  Michael Bouchaud (yoz)

        * fix wrong size calc in naviframe when an item have setted
          tittle_visible_set to false.

2012-09-24  Flavio Ceolin

        * elementary_codegen: Adding support for box and table.

2012-09-25  Cedric Bail

        * Escape theme filename correctly.

2012-09-27  Jaehwan Kim

        * Add the toolbar API which expand the transverse length

2012-09-28  Shinwoo Kim (kimcinoo)

        * Fix disk selector selection of middle item when obj not at 0.

2012-09-28   Jihyeon Seol

        * Fix list corruption issue in multibuttonentry.
