@@ -8,6 +8,7 @@ Additions:
    * Add window floating mode api's
    * Add reorder mode set/get API in Toolbar.
    * Add the toolbar API which expand the transverse length.
+   * Add a way to know which month is displayed in elm_calendar
 
 Improvements:
 
